// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DescribedTerm theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <span
    class="rh-described-term"
  >
    <span
      aria-describedby="rh-described-term-ID"
      class="rh-described-term__word"
      tabindex="0"
    >
      Direct
    </span>
    <span
      class="rh-visually-hidden"
      id="rh-described-term-ID"
    >
      How directly the source supports the evidence.
    </span>
  </span>
</div>
`;

exports[`DescribedTerm theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <span
    class="rh-described-term"
  >
    <span
      aria-describedby="rh-described-term-ID"
      class="rh-described-term__word"
      tabindex="0"
    >
      Direct
    </span>
    <span
      class="rh-visually-hidden"
      id="rh-described-term-ID"
    >
      How directly the source supports the evidence.
    </span>
  </span>
</div>
`;

exports[`DescribedTerm theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <span
    class="rh-described-term"
  >
    <span
      aria-describedby="rh-described-term-ID"
      class="rh-described-term__word"
      tabindex="0"
    >
      Direct
    </span>
    <span
      class="rh-visually-hidden"
      id="rh-described-term-ID"
    >
      How directly the source supports the evidence.
    </span>
  </span>
</div>
`;

exports[`DescribedTerm theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <span
    class="rh-described-term"
  >
    <span
      aria-describedby="rh-described-term-ID"
      class="rh-described-term__word"
      tabindex="0"
    >
      Direct
    </span>
    <span
      class="rh-visually-hidden"
      id="rh-described-term-ID"
    >
      How directly the source supports the evidence.
    </span>
  </span>
</div>
`;
